# background-tasks-python

./: .isort.cfg  CODEOWNERS  Makefile  README.md  bootstrap.py  contributing.md  pyproject.toml
.github/workflows/: test.yml
background/: interface.py
background/transport/: aws_lambda.py
fops/background/: _task.py  interface.py
fops/background/transport/: aws_lambda.py
tests/: conftest.py
tests/background/task/: fake_tasks.py  test_eager_call.py  test_setup_validation.py
tests/background/task/hard_fails/: cannot_be_class_method.py  cannot_be_lambda.py
tests/background/transport/: conftest.py  test_lambda_transport.py
