[tool.poetry]
name = "fops-background"
version = "0.1.0"
description = "Background Tasks implementation, primarily targeting AWS Lambda"
authors = ["Anthony King <anthony.king@fundingoptions.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8"
boto3 = "^1.17.28"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
responses = "^0.13.1"
pytest-mock = "^3.5.1"
Faker = "^6.6.1"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
